[FIX]theme_graphene_plus: Supprimer margin-top 20px sur #wrap

--- a/theme_graphene_plus/static/src/less/options/colors/natuarai_1.less
+++ b/theme_graphene_plus/static/src/less/options/colors/natuarai_1.less
@@ -75,6 +75,9 @@ a {
 	color: @link-color;
 }
 
+#wrap {
+    margin-top: 0px;
+}
 
 text-muted {
 	color: #b5abab;
@@ -83,7 +86,6 @@ text-muted {
 //menu de navigation
 #graph_header .navbar, #graph_header_affix .navbar {
 	background-color: #000000;
-	border-bottom: 1px solid #eeeeee;
 }
 
 //menu de navigation afflix
